--- a/CodeForU/templates/layout.html
+++ b/CodeForU/templates/layout.html
@@ -171,10 +171,19 @@
       
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto p-4 p-lg-0">
-          <a href= {% if user.is_student %} {% url 'users:student_dashboard' %} {% elif user.is_mentor %} {% url 'users:mentor_dashboard' %} {% endif %} class="nav-item nav-link custom-button">Home</a>
+          {% if user.is_student %}
+          <a href="/users/student_dashboard/" class="nav-item nav-link custom-button">Home</a>
           <a href="{% url 'users:questions_list' %}" class="nav-item nav-link custom-button"
-            >Questions</a
+          >Questions</a
           >
+          {% elif user.is_mentor %}
+          <a href="/users/mentor_dashboard/" class="nav-item nav-link custom-button">Home</a>
+          <a href="{% url 'users:questions_list' %}" class="nav-item nav-link custom-button"
+          >Questions</a
+          >
+          {% else %}
+          <a href="/" class="nav-item nav-link custom-button">Home</a>
+          {% endif %}
           
           {% if user.is_mentor %}
           <a href="/chat/" class="nav-item nav-link custom-button">Add Question</a>
@@ -199,6 +208,7 @@
 
           {% endif %}
         </div>
+        {% if user.is_authenticated %}
         <li class="nav-item dropdown">
           <a class="nav-link custom-button" href="#" id="notificationDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             {% if user.is_authenticated %}
@@ -221,6 +231,7 @@
             <li><a class="dropdown-item" href="{% url 'users:clear_notifications' %}">Clear Notifications</a></li>
           </ul>
         </li>
+        {% endif %}
   
         {% if user.is_authenticated %}
         <form id="logout-form" action="{% url 'users:logout' %}" method="post">
