--- a/CodeForU/templates/homepage.html
+++ b/CodeForU/templates/homepage.html
@@ -75,7 +75,6 @@
                         <div class="p-4">
                             <i class="fa fa-3x fa-graduation-cap text-primary mb-4"></i>
                             <h5 class="mb-3">Skilled Instructors</h5>
-                            <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
                         </div>
                     </div>
                 </div>
@@ -84,7 +83,6 @@
                         <div class="p-4">
                             <i class="fa fa-3x fa-globe text-primary mb-4"></i>
                             <h5 class="mb-3">Online Classes</h5>
-                            <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
                         </div>
                     </div>
                 </div>
@@ -93,7 +91,6 @@
                         <div class="p-4">
                             <i class="fa fa-3x fa-home text-primary mb-4"></i>
                             <h5 class="mb-3">Home Projects</h5>
-                            <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
                         </div>
                     </div>
                 </div>
@@ -102,7 +99,6 @@
                         <div class="p-4">
                             <i class="fa fa-3x fa-book-open text-primary mb-4"></i>
                             <h5 class="mb-3">Book Library</h5>
-                            <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
                         </div>
                     </div>
                 </div>
@@ -171,7 +167,7 @@
                   <div class="row">
                     <div class="col-12">
                       <div class="count-area-content percentage">
-                        <div class="count-digit">5000</div>
+                        <div class="count-digit">100</div>
                         <div class="count-title">Succesed Students</div>
                       </div>
                     </div>
@@ -223,8 +219,8 @@
                         </div>
                       
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Instructor Name</h5>
-                            <small>Designation</small>
+                            <h5 class="mb-0">Shay Moshe</h5>
+                            <small>Mentor</small>
                         </div>
                     </div>
                 </div>
@@ -235,8 +231,8 @@
                         </div>
                       
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Instructor Name</h5>
-                            <small>Designation</small>
+                            <h5 class="mb-0">Amit Golan</h5>
+                            <small>Mentor</small>
                         </div>
                     </div>
                 </div>
@@ -247,8 +243,8 @@
                         </div>
                         
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Instructor Name</h5>
-                            <small>Designation</small>
+                            <h5 class="mb-0">Lior Azulay</h5>
+                            <small>Mentor</small>
                         </div>
                     </div>
                 </div>
@@ -259,8 +255,8 @@
                         </div>
                       
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Instructor Name</h5>
-                            <small>Designation</small>
+                            <h5 class="mb-0">Dana Cohen</h5>
+                            <small>Mentor</small>
                         </div>
                     </div>
                 </div>
@@ -280,42 +276,41 @@
             <div class="owl-carousel testimonial-carousel position-relative">
                 <div class="testimonial-item text-center">
                     <img class="border rounded-circle p-2 mx-auto mb-3" src={% static "img/testimonial-1.jpg" %} style="width: 80px; height: 80px;">
-                    <h5 class="mb-0">Client Name</h5>
-                    <p>Profession</p>
+                    <h5 class="mb-0">May Cohen</h5>
+                    <p>Computer Science Student</p>
                     <div class="testimonial-text bg-light text-center p-4">
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam et eos. Clita erat ipsum et lorem et sit.</p>
+                        <p class="mb-0">“Your platform is one of the best tools I have learned from so far. The combination of AI and mentors creates an interactive and inspiring learning experience. The mentors were professional and supportive, and the automated tools you provided helped me understand and improve quickly. Thank you for the support!”</p>
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
                     <img class="border rounded-circle p-2 mx-auto mb-3" src={% static "img/testimonial-2.jpg" %} style="width: 80px; height: 80px;">
-                    <h5 class="mb-0">Client Name</h5>
-                    <p>Profession</p>
+                    <h5 class="mb-0">Or Levy</h5>
+                    <p>Software Engineering Student</p>
                     <div class="testimonial-text bg-light text-center p-4">
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam et eos. Clita erat ipsum et lorem et sit.</p>
+                        <p class="mb-0">“Your system offers a high-level learning experience with excellent flexibility. The AI-based platform helped me quickly overcome coding issues, and the support from mentors was always available and helpful. I felt that whenever I faced a problem, I had someone to assist me. Kudos for the excellent work!”</p>
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
                     <img class="border rounded-circle p-2 mx-auto mb-3" src={% static "img/testimonial-3.jpg" %} style="width: 80px; height: 80px;">
-                    <h5 class="mb-0">Client Name</h5>
-                    <p>Profession</p>
+                    <h5 class="mb-0">Daniel Ramon</h5>
+                    <p> Information Systems Student</p>
                     <div class="testimonial-text bg-light text-center p-4">
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam et eos. Clita erat ipsum et lorem et sit.</p>
+                    <p class="mb-0">“Your service provides an amazing learning experience. The integration of AI with personal mentor support is a great solution that yields excellent results. I find it easier to understand complex concepts and tackle new challenges. Thanks for the investment and quality!”</p>
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
                     <img class="border rounded-circle p-2 mx-auto mb-3" src={% static "img/testimonial-4.jpg" %} style="width: 80px; height: 80px;">
-                    <h5 class="mb-0">Client Name</h5>
-                    <p>Profession</p>
+                    <h5 class="mb-0">Rotem Gal</h5>
+                    <p>Software Engineering Student</p>
                     <div class="testimonial-text bg-light text-center p-4">
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam et eos. Clita erat ipsum et lorem et sit.</p>
+                        <p class="mb-0">“I couldn’t ask for more! The platform offers a wide range of learning tools tailored to my needs. The support from mentors exceeded my expectations and helped me grasp topics that are usually difficult for me to learn on my own. The AI helps me develop coding skills much faster. I highly recommend the platform!”</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <!-- Testimonial End -->
-        
-
+       
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
