--- a/CodeForU/users/templates/login.html
+++ b/CodeForU/users/templates/login.html
@@ -1,5 +1,5 @@
+{% extends "layout.html" %}
 {% load static %}
-
 
 {% block title %}
 {% endblock %}
@@ -9,17 +9,31 @@
 <html lang="en">
 <head>
     <title>Login</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--===============================================================================================-->    
-    <link rel="icon" type="image/png" href={% static "img/icons/favicon.ico" %}/>
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href={% static "fonts/font-awesome-4.7.0/css/font-awesome.min.css" %}>
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href={% static "css/util.css" %}>
-    <link rel="stylesheet" type="text/css" href={% static "css/style.css" %}>
+    <!-- Favicon -->
+    <link href={% static "img/favicon.ico" %} rel="icon">
 
-    <!--===============================================================================================-->
+    <!-- Google Web Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Nunito:wght@600;700;800&display=swap" rel="stylesheet">
+
+    <!-- Icon Font Stylesheet -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+
+    <!-- Libraries Stylesheet -->
+    <link href={%static  "lib/animate/animate.min.css" %} rel="stylesheet">
+    <link href={%static "lib/owlcarousel/assets/owl.carousel.min.css" %}  rel="stylesheet">
+
+    <!-- Customized Bootstrap Stylesheet -->
+    <link href={%static "css/bootstrap.min.css" %} rel="stylesheet">
+
+    <!-- Template Stylesheet -->
+    <link href={%static "css/style.css" %} rel="stylesheet">
+    <link href={%static "css/animate.css" %} rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
 <body>
     
