--- a/CodeForU/templates/layout.html
+++ b/CodeForU/templates/layout.html
@@ -153,7 +153,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg custom-navbar navbar-light shadow fixed-top p-0">
-      <a href={% if user.is_student %} "/users/student_dashboard/" {% elif user.is_mentor %} "/users/mentor_dashboard/" {% endif %} 
+      <a href={% if user.is_student %} "/users/student_dashboard/" {% elif user.is_mentor %} "/users/mentor_dashboard/" {% else %} "/" {% endif %} 
       class="navbar-brand d-flex align-items-center px-4 px-lg-5">
         <h2 class="m-0 text-primary">
           <img src={% static "img/logo.png" %} alt="Description of Image"
